# hpcguix-web

./: .gitignore  Makefile.am  README.md  configure.ac  env.in  environment.scm  guile.am  guix.scm  hpcguix-web.in  hpcweb-configuration.scm  pre-inst-env.in  run.in  web-interface.scm
modules/: hpcweb-configuration.scm
modules/www/: config.scm.in  packages.scm  pages.scm  util.scm
modules/www/pages/: channel.scm  channels.scm  error.scm  javascript.scm  package.scm  welcome.scm
site-specific/: config.scm
static/: datatables.min.css  datatables.min.js  favicon.xcf  hpcguix-web.js
static/css/: code.css  main.css
static/highlight/: highlight.pack.js
static/highlight/styles/: androidstudio.css
www/: config.scm  config.scm.in  packages.scm  pages.scm  util.scm
www/pages/: build-status.scm  channel.scm  error.scm  faq.scm  getting-started.scm  help.scm  javascript.scm  package.scm  solutions.scm  welcome.scm
www/pages/getting-started/: bioinformaticians.scm  scientists.scm
